Bug 523313 - Plasma Login Manager becomes non-functional after the only display is temporarily disconnected and reconnected
Summary: Plasma Login Manager becomes non-functional after the only display is tempo...
Status: RESOLVED FIXED
Alias: None
Product: plasma-login-manager
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.7.2
Platform: CachyOS Linux
: NOR major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 521192 522535 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-07-21 01:06 UTC by matiaswrojas
Modified: 2026-07-29 19:44 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description matiaswrojas 2026-07-21 01:06:10 UTC
STEPS TO REPRODUCE

  1. Start Plasma Login Manager on Wayland.
  2. Use a single monitor connected through DisplayPort.
  3. Leave the login screen active until the monitor disconnects/reconnects,
     for example after entering standby or waking up.
  4. Wake the monitor and enter the password.
  5. Press Enter or click Login.

  OBSERVED RESULT

  The login screen remains visible, but login no longer works. The password
  cannot be submitted again, and the shutdown/reboot buttons do not respond.

  The journal shows that all outputs temporarily disappeared. After Qt created
  a placeholder screen, the QML singleton objects used by the greeter became
  null:

  plasma-login-greeter: There are no outputs - creating placeholder screen
  plasma-login-greeter: Creating a layer shell for placeholder screen
  plasma-login-greeter: "Authenticator" is not available because the callback
  function returns a null pointer.
  plasma-login-greeter: "UserModel" is not available because the callback
  function returns a null pointer.
  plasma-login-greeter: "SessionManagement" is not available because the
  callback function returns a null pointer.
  Login.qml: TypeError: Cannot read property 'needsPassword' of null
  GreeterState.qml: TypeError: Property 'login' of object
  org.kde.plasma.login.Authenticator is not a function

  The issue occurred twice, with exactly the same journal signature.

  EXPECTED RESULT

  The greeter should preserve or recreate its authentication, user, session,
  and power-management objects after the display reconnects. Login and power
  buttons should remain functional.

  SOFTWARE/OS VERSIONS

  Operating System: CachyOS Linux
  Plasma Login Manager: 6.7.2-2
  KDE Plasma Workspace: 6.7.3
  KWin: 6.7.3
  Qt: 6.11.1
  Kernel: 7.1.4-1-cachyos
  Graphics platform: Wayland
  NVIDIA driver: 610.43.03

  ADDITIONAL INFORMATION

  CPU: AMD Ryzen 7 7800X3D
  GPU 1: NVIDIA GeForce RTX 4080
  GPU 2: AMD Raphael integrated GPU
  Monitor: Gigabyte M27Q, 2560x1440 at 170 Hz, connected by DisplayPort
  Display configuration: one active monitor
  The monitor includes a USB hub/KVM.

  There were no NVIDIA Xid errors or kernel GPU hangs. The greeter process
  remained alive; only its QML backend objects became unavailable.

  The two confirmed occurrences happened immediately after the monitor output
  temporarily disappeared. In one occurrence, the monitor USB/KVM hub and input
  devices reconnected at the same timestamp.
Comment 1 Bug Janitor Service 2026-07-23 08:58:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-login-manager/-/merge_requests/179
Comment 2 Oliver Beard 2026-07-23 09:00:55 UTC
Git commit 1c99b3b1f161ca880f8a8154d9258ced26ba7a7a by Oliver Beard.
Committed on 23/07/2026 at 08:54.
Pushed by olib into branch 'Plasma/6.7'.

frontend/greeter: Fix loss of QML engine when all greeter windows destroyed

We need to keep the engine, else newly created windows cannot use the singletons and the greeter is broken.

This is not an issue in 6.8/master because of refactoring in 562becde (port from `QuickViewSharedEngine`), as `LoginGreeter` owns and retains a `QQmlEngine`.
FIXED-IN: 6.7.4

M  +3    -0    src/frontend/greeter/main.cpp

https://invent.kde.org/plasma/plasma-login-manager/-/commit/1c99b3b1f161ca880f8a8154d9258ced26ba7a7a
Comment 3 Oliver Beard 2026-07-24 19:45:11 UTC
*** Bug 522535 has been marked as a duplicate of this bug. ***
Comment 4 Oliver Beard 2026-07-29 19:44:52 UTC
*** Bug 521192 has been marked as a duplicate of this bug. ***