frontend/greeter: Fix loss of QML engine when all greeter windows destroyed

We need to keep the engine, else newly created windows cannot use the singletons and the greeter is broken.

This is not an issue in 6.8/master because of refactoring in 562becde (port from `QuickViewSharedEngine`), as `LoginGreeter` owns and retains a `QQmlEngine`.

BUG: 523313
FIXED-IN: 6.7.4